--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,12 @@
+spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/onlog_blog?serverTimezone=UTC&createDatabaseIfNotExist=true
+    username: root
+    password: 12345
 
+  jpa:
+    hibernate:
+      ddl-auto: create
+    properties:
+      hibernate:
+        format_sql: true
