--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,12 @@ dependencies {
     runtimeOnly 'com.mysql:mysql-connector-j'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    // Swagger
+    implementation 'javax.servlet:javax.servlet-api:4.0.1'
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-api:2.1.0'
+    implementation 'org.hibernate.validator:hibernate-validator:8.0.0.Final'
 }
 
 dependencyManagement {
