--- a/.gitignore
+++ b/.gitignore
@@ -280,3 +280,6 @@ ehthumbs_vista.db
 # Windows shortcuts
 
 # End of https://www.toptal.com/developers/gitignore/api/windows,macos,intellij,visualbasic,java
+
+# secret.yml
+secret.yml
