--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,6 @@
 spring:
-  datasource:
-    url: jdbc:mysql://localhost:3306/onlog_blog?serverTimezone=UTC&createDatabaseIfNotExist=true
-    username: root
-    password: 12345
+  config:
+    import: classpath:secret.yml
 
   jpa:
     hibernate:
