[Feat] Spring eureka client 설정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,3 +8,14 @@ spring:
     properties:
       hibernate:
         format_sql: true
+eureka:
+  instance:
+    appname: ONLOG-BLOG-SERVER
+    prefer-ip-address: true
+    lease-renewal-interval-in-seconds: 30
+
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: http://172.16.213.26:8761/eureka
