--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
-//    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+    // Spring Cloud
+    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
 
     // Database
     runtimeOnly 'com.mysql:mysql-connector-j'
