--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -4,5 +4,9 @@ spring:
     username: root
     password: 12345
 
+  jpa:
+    hibernate:
+      ddl-auto: create
+
 jwt:
   secret-key: only-test-jwt-secret-key
