--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,9 +5,16 @@ spring:
   jpa:
     hibernate:
       ddl-auto: none
+
     properties:
       hibernate:
+#        show_sql: true
         format_sql: true
+
+logging.level:
+#  org.hibernate.SQL: debug
+  org.hibernate.type: trace
+
 eureka:
   instance:
     appname: ONLOG-BLOG-SERVER
