--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,11 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    // Reactor
+    implementation 'io.projectreactor:reactor-core'
 
     // Spring Cloud
 //    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
