--- a/build.gradle
+++ b/build.gradle
@@ -54,7 +54,7 @@ dependencies {
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 
     // Query
-    implementation('com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.0')
+//    implementation('com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.0')
 }
 
 dependencyManagement {
