--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,13 +4,13 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: none
+      ddl-auto: create
 
-    properties:
-      hibernate:
+#    properties:
+#      hibernate:
 #        show_sql: true
-        format_sql: true
+#        format_sql: true
 
-logging.level:
+#logging.level:
 #  org.hibernate.SQL: debug
-  org.hibernate.type: trace
+#  org.hibernate.type: trace
