[FEAT] DB 자원 변경에 의한 이중화 설정 - AWS로 마이그레이션 진행됨에 따라 DB 클러스터 연결을 위한 이중화 설정

--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,9 @@ dependencies {
     // Database
     runtimeOnly 'com.mysql:mysql-connector-j'
 
+    // Guava
+    implementation 'com.google.guava:guava:31.1-jre'
+
     // Lombok
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
@@ -54,7 +57,7 @@ dependencies {
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 
     // Query
-    implementation('com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.0')
+//    implementation('com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.0')
 }
 
 dependencyManagement {
