--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,11 +6,11 @@ spring:
     hibernate:
       ddl-auto: none
 
-    properties:
-      hibernate:
+#    properties:
+#      hibernate:
 #        show_sql: true
-        format_sql: true
+#        format_sql: true
 
-logging.level:
+#logging.level:
 #  org.hibernate.SQL: debug
-  org.hibernate.type: trace
+#  org.hibernate.type: trace
